tests/negative/fake_negative.py
a = 1
if a == 1:
	a = "a is 1"
